src/Base/main/default/objects/AcctSeedERP__Sales_Order__c/fields/AcctSeedERP__Billing_City__c.field-meta.xml
<CustomField>
    <fullName>AcctSeedERP__Billing_City__c</fullName>
    <label>Billing City</label>
    <length>40</length>
    <type>Text</type>
</CustomField>