src/Base/main/default/objects/AcctSeedERP__Sales_Order__c/fields/AcctSeedERP__Billing_Country__c.field-meta.xml
<CustomField>
    <fullName>AcctSeedERP__Billing_Country__c</fullName>
    <label>Billing Country</label>
    <length>80</length>
    <type>Text</type>
</CustomField>