src/Base/main/default/objects/AcctSeedERP__Sales_Order__c/fields/AcctSeedERP__Billing_State__c.field-meta.xml
<CustomField>
    <fullName>AcctSeedERP__Billing_State__c</fullName>
    <label>Billing State</label>
    <length>80</length>
    <type>Text</type>
</CustomField>