src/Base/main/default/objects/AcctSeedERP__Sales_Order__c/fields/AcctSeedERP__Opportunity__c.field-meta.xml
<CustomField>
    <fullName>AcctSeedERP__Opportunity__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Opportunity</label>
    <referenceTo>Opportunity</referenceTo>
    <relationshipLabel>Sales Order</relationshipLabel>
    <relationshipName>Sales_Order</relationshipName>
    <type>Lookup</type>
</CustomField>