src/Base/main/default/objects/AcctSeedERP__Sales_Order__c/fields/AcctSeedERP__Shipment_Count__c.field-meta.xml
<CustomField>
    <fullName>AcctSeedERP__Shipment_Count__c</fullName>
    <label>Shipment Count</label>
    <summaryForeignKey>AcctSeedERP__Shipment__c.AcctSeedERP__Sales_Order__c</summaryForeignKey>
    <summaryOperation>count</summaryOperation>
    <type>Summary</type>
</CustomField>