src/Base/main/default/objects/AcctSeedERP__Sales_Order__c/fields/AcctSeedERP__Shipping_Street__c.field-meta.xml
<CustomField>
    <fullName>AcctSeedERP__Shipping_Street__c</fullName>
    <label>Shipping Street</label>
    <type>TextArea</type>
</CustomField>