src/Base/main/default/objects/AcctSeedERP__Sales_Order__c/fields/Bank__c.field-meta.xml
<CustomField>
    <fullName>Bank__c</fullName>
    <defaultValue>0</defaultValue>
    <label>Cash / CC</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>