src/Base/main/default/objects/AcctSeedERP__Sales_Order__c/fields/Ecwid_Order_Id__c.field-meta.xml
<CustomField>
    <fullName>Ecwid_Order_Id__c</fullName>
    <externalId>true</externalId>
    <label>Ecwid Order Id</label>
    <length>255</length>
    <type>Text</type>
</CustomField>