src/Base/main/default/objects/AcctSeedERP__Sales_Order__c/fields/Ecwid_Store_Id__c.field-meta.xml
<CustomField>
    <fullName>Ecwid_Store_Id__c</fullName>
    <label>Ecwid Store Id</label>
    <length>255</length>
    <type>Text</type>
</CustomField>