src/Base/main/default/objects/AcctSeedERP__Sales_Order__c/fields/GL_Account_Variable_1__c.field-meta.xml
<CustomField>
    <fullName>GL_Account_Variable_1__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Business Unit (GLV1)</label>
    <referenceTo>AcctSeed__Accounting_Variable__c</referenceTo>
    <relationshipLabel>Sales Order (Business Unit (GLV1))</relationshipLabel>
    <relationshipName>Sales_Order1</relationshipName>
    <type>Lookup</type>
</CustomField>