src/Base/main/default/objects/AcctSeedERP__Sales_Order__c/fields/GL_Account_Variable_2__c.field-meta.xml
<CustomField>
    <fullName>GL_Account_Variable_2__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Department (GLV2)</label>
    <referenceTo>AcctSeed__Accounting_Variable__c</referenceTo>
    <relationshipLabel>Sales Order (Department (GLV2))</relationshipLabel>
    <relationshipName>Sales_Order2</relationshipName>
    <type>Lookup</type>
</CustomField>