src/Base/main/default/objects/AcctSeedERP__Sales_Order__c/fields/GL_Account_Variable_3__c.field-meta.xml
<CustomField>
    <fullName>GL_Account_Variable_3__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Tax Zone (GLV3)</label>
    <referenceTo>AcctSeed__Accounting_Variable__c</referenceTo>
    <relationshipLabel>Sales Order</relationshipLabel>
    <relationshipName>Sales_Order</relationshipName>
    <type>Lookup</type>
</CustomField>