src/Base/main/default/objects/AcctSeedERP__Sales_Order__c/fields/GMBLASERP__Fill_Date__c.field-meta.xml
<CustomField>
    <fullName>GMBLASERP__Fill_Date__c</fullName>
    <label>Fill Date</label>
    <type>Date</type>
</CustomField>