src/Base/main/default/objects/AcctSeedERP__Sales_Order__c/fields/GMBLASERP__Pricebook__c.field-meta.xml
<CustomField>
    <fullName>GMBLASERP__Pricebook__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Pricebook</label>
    <referenceTo>Pricebook2</referenceTo>
    <relationshipLabel>Sales Orders</relationshipLabel>
    <relationshipName>Sales_Orders</relationshipName>
    <type>Lookup</type>
</CustomField>