src/Base/main/default/objects/AcctSeedERP__Sales_Order__c/fields/GMBLASERP__Warehouse__c.field-meta.xml
<CustomField>
    <fullName>GMBLASERP__Warehouse__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Warehouse</label>
    <referenceTo>AcctSeedERP__Warehouse__c</referenceTo>
    <relationshipLabel>Sales Orders</relationshipLabel>
    <relationshipName>Sales_Orders</relationshipName>
    <type>Lookup</type>
</CustomField>