src/Base/main/default/objects/AcctSeedERP__Sales_Order__c/fields/Payment_Status__c.field-meta.xml
<CustomField>
    <fullName>Payment_Status__c</fullName>
    <label>Payment Status</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <sorted>true</sorted>
            <value>
                <fullName>AWAITING_PAYMENT</fullName>
                <label>Awaiting Payment‍</label>
            </value>
            <value>
                <fullName>Cancelled‍</fullName>
            </value>
            <value>
                <fullName>PAID</fullName>
                <label>Paid‍</label>
            </value>
            <value>
                <fullName>Partially Refunded‍</fullName>
            </value>
            <value>
                <fullName>REFUNDED</fullName>
                <label>Refunded‍</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>