src/Base/main/default/objects/AcctSeedERP__Sales_Order__c/fields/Profit_Pct__c.field-meta.xml
<CustomField>
    <fullName>Profit_Pct__c</fullName>
    <formula>IF(BLANKVALUE(Revenue__c,0) = 0,0,(Revenue__c - Expense__c)/Revenue__c)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Profit %</label>
    <precision>18</precision>
    <scale>1</scale>
    <type>Percent</type>
</CustomField>