src/Base/main/default/objects/AcctSeedERP__Sales_Order__c/fields/Service_Product_License__c.field-meta.xml
<CustomField>
    <fullName>Service_Product_License__c</fullName>
    <label>License</label>
    <length>50</length>
    <type>Text</type>
</CustomField>