src/Base/main/default/objects/AcctSeedERP__Sales_Order__c/fields/Stage__c.field-meta.xml
<CustomField>
    <fullName>Stage__c</fullName>
    <label>Stage</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>AWAITING_PROCESSING</fullName>
                <default>true</default>
                <label>AWAITING PROCESSING</label>
            </value>
            <value>
                <fullName>PROCESSING</fullName>
            </value>
            <value>
                <fullName>SHIPPED</fullName>
            </value>
            <value>
                <fullName>OUT FOR DELIVERY</fullName>
            </value>
            <value>
                <fullName>DELIVERED</fullName>
            </value>
            <value>
                <fullName>WILL NOT DELIVER</fullName>
            </value>
            <value>
                <fullName>RETURNED</fullName>
            </value>
            <value>
                <fullName>READY FOR PICKUP</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>