src/Base/main/default/objects/AcctSeedERP__Sales_Order__c/fields/Tax_is_Harmonized__c.field-meta.xml
<CustomField>
    <fullName>Tax_is_Harmonized__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Tax is Harmonized</label>
    <type>Checkbox</type>
</CustomField>