src/Base/main/default/objects/AcctSeedERP__Sales_Order__c/recordTypes/Online_Orders.recordType-meta.xml
<RecordType>
    <fullName>Online_Orders</fullName>
    <active>true</active>
    <label>Online Orders</label>
</RecordType>